# nba-draft-prediction

./: .gitignore  Experiment_1_XGBoost_All_Features.ipynb  Experiment_2_XGBoost_Curated_Features.ipynb  Experiment_3_Random_Forest.ipynb  Experiment_4_CatBoost.ipynb  README.md  pyproject.toml  requirements.txt
