[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "amla_at1"
version = "0.0.1"
description = "This is our first assignment for the subject advance machine learning."
authors = [
  { name = "Agam Singh Saini" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
    "scikit-learn (==1.5.1)",
    "pandas (==2.2.2)",
    "jupyterlab (==4.2.3)",
    "joblib (==1.4.2)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lightgbm (==4.4.0)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
]
requires-python = "==3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["amla_at1"]
force_sort_within_sections = true


